# echobase

./: README.md  echobase.desktop  echobase.sh  extension.js  justfile  metadata.json  pyproject.toml
.claude/: settings.local.json
plots/: README.md
src/core/: atspi.py  audiofx.py  config.py  main.py  oobe.py  phrases.py  ui.py
src/plugins/: 00_eyetrack.py  00_mousegrid.py  a11y.py  apps.py  browser.py  dictation.py  files.py  keyboard.py  labels.py  media.py  scroll.py  snippets.py  system.py  time.py  window.py  windows.py  zz_base.py
tests/core/: test_autostart.py  test_cli.py  test_main.py  test_new_features.py  test_oobe.py
tests/plugins/: test_apps.py  test_browser.py  test_dictation.py  test_eyetrack.py  test_files.py  test_labels.py  test_media.py  test_mousegrid.py  test_scroll.py  test_snippets.py  test_system.py  test_zz_base.py
validation/: GETTING_STARTED.md  README.md  __init__.py  conftest.py  make_plots.py  pytest.ini
validation/automated/logic/: conftest.py  test_cadence_vad.py  test_command_routing.py  test_dysarthria_sim.py  test_error_recovery.py  test_integration.py  test_metrics_selfcheck.py  test_offline_no_network.py  test_snr_mixer_and_wer.py  test_stress_memory.py  test_wake_word.py
validation/automated/realmodel/: conftest.py  test_latency.py  test_noise_snr.py  test_wer.py
validation/corpora/: README.md
validation/corpora/reading_passages/: passage_01.commands.json  passage_01.txt  passage_02.commands.json  passage_02.txt
validation/docs/: chapter_map.md  methodology.md  metrics_definitions.md
validation/harness/: __init__.py  corpus.py  dysarthria_sim.py  echobase_factory.py  latency_probe.py  metrics.py  routing_eval.py  snr_mixer.py  stress_runner.py  wer.py  whisper_runner.py
validation/protocols/: far_field.md  multimodal_feedback.md  test_case_template.md  uat_scenarios.md
validation/results/: cadence_vad.csv  cadence_vad.json  far_field_results.csv  far_field_results.md  integration_degradation.csv  integration_degradation.json  latency_decomposition.csv  latency_decomposition.json  recovery_audit.csv  recovery_audit.json  routing_accuracy.csv  routing_accuracy.json  routing_per_plugin.csv  routing_per_plugin.json  stress_memory.csv  stress_memory.json  stress_runtime.csv  stress_runtime.json  stress_runtime.md  wer_clean.csv  wer_clean.json  wer_vs_snr.csv  wer_vs_snr.json
validation/results/profile_1_fast/: latency_decomposition.md  wer_clean.md  wer_vs_snr.md
validation/results/profile_2_balanced/: integration_degradation.md  latency_decomposition.md  wer_clean.md  wer_vs_snr.md
validation/results/profile_3_accurate/: cadence_vad.md  latency_decomposition.md  routing_per_plugin.md  wer_clean.md  wer_vs_snr.md
validation/results/profile_4_maximum/: latency_decomposition.md  recovery_audit.md  routing_accuracy.md  stress_memory.md  wer_clean.md  wer_vs_snr.md
